@@ -34,6 +34,8 @@
 /* Exported functions (besides yylex): */
 
 void initialize_scanner (FILE *in_file);
+void push_scanner (FILE *in_file);
+void pop_scanner ();
 char* erroneous_line ();
 void scanner_start_line ();
 int register_name_to_number (char *name);
